Make roundcube role use a file in sources.list.d
Avoid adding lines to /etc/apt/sources.list - instead create a new file
like the dovecot and collectd roles do.

--- a/roles/webmail/tasks/roundcube.yml
+++ b/roles/webmail/tasks/roundcube.yml
@@ -1,5 +1,5 @@
 - name: Add backports for Roundcube on Debian
-  lineinfile: dest=/etc/apt/sources.list line="deb http://http.debian.net/debian wheezy-backports main"
+  apt_repository: repo='deb http://http.debian.net/debian wheezy-backports main'
   when: ansible_distribution_release == 'wheezy'
   tags:
     - dependencies
